trigger-func/trigger-func-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: trigger-func-svc
  name: trigger-func-svc
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: trigger-func
  type: NodePort
status:
  loadBalancer: {}
