trigger-func/trigger-func-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trigger-func-gwy
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trigger-func
spec:
  hosts:
  - "*"
  gateways:
  - trigger-func-gwy
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: trigger-func-svc
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: trigger-func-svc
spec:
  host: trigger-func-svc
  subsets:
  - name: v1
    labels:
      version: v1
